// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StaticTemplateEngine snapshot bond.activo / en 1`] = `
{
  "body": "<p>Bond <strong>BONO-001</strong> is active again.</p>",
  "subject": "Bond active",
}
`;

exports[`StaticTemplateEngine snapshot bond.activo / es 1`] = `
{
  "body": "<p>El bono <strong>BONO-001</strong> está activo nuevamente.</p>",
  "subject": "Bono activo",
}
`;

exports[`StaticTemplateEngine snapshot bond.aprobado / en 1`] = `
{
  "body": "<p>Bond <strong>BONO-001</strong> was approved.</p>",
  "subject": "Bond approved",
}
`;

exports[`StaticTemplateEngine snapshot bond.aprobado / es 1`] = `
{
  "body": "<p>El bono <strong>BONO-001</strong> fue aprobado.</p>",
  "subject": "Bono aprobado",
}
`;

exports[`StaticTemplateEngine snapshot bond.congelado / en 1`] = `
{
  "body": "<p>Bond <strong>BONO-001</strong> was frozen and cannot be transferred.</p>",
  "subject": "Bond frozen",
}
`;

exports[`StaticTemplateEngine snapshot bond.congelado / es 1`] = `
{
  "body": "<p>El bono <strong>BONO-001</strong> fue congelado y no puede transferirse.</p>",
  "subject": "Bono congelado",
}
`;

exports[`StaticTemplateEngine snapshot bond.created / en 1`] = `
{
  "body": "<p>Bond <strong>BONO-001</strong> was issued for Partido Demo.</p>",
  "subject": "Bond issued",
}
`;

exports[`StaticTemplateEngine snapshot bond.created / es 1`] = `
{
  "body": "<p>Se emitió el bono <strong>BONO-001</strong> para Partido Demo.</p>",
  "subject": "Bono emitido",
}
`;

exports[`StaticTemplateEngine snapshot bond.en_venta / en 1`] = `
{
  "body": "<p>Bond <strong>BONO-001</strong> was published to the marketplace.</p>",
  "subject": "Bond published to marketplace",
}
`;

exports[`StaticTemplateEngine snapshot bond.en_venta / es 1`] = `
{
  "body": "<p>El bono <strong>BONO-001</strong> fue publicado en el mercado.</p>",
  "subject": "Bono publicado en el mercado",
}
`;

exports[`StaticTemplateEngine snapshot bond.rechazado / en 1`] = `
{
  "body": "<p>Bond request for <strong>BONO-001</strong> was rejected. Reason: Documentación incompleta</p>",
  "subject": "Bond rejected",
}
`;

exports[`StaticTemplateEngine snapshot bond.rechazado / es 1`] = `
{
  "body": "<p>La solicitud del bono <strong>BONO-001</strong> fue rechazada. Motivo: Documentación incompleta</p>",
  "subject": "Bono rechazado",
}
`;

exports[`StaticTemplateEngine snapshot notification.generic / en 1`] = `
{
  "body": "<p>custom.unknown.event</p>",
  "subject": "Update",
}
`;

exports[`StaticTemplateEngine snapshot notification.generic / es 1`] = `
{
  "body": "<p>custom.unknown.event</p>",
  "subject": "Actualización",
}
`;

exports[`StaticTemplateEngine snapshot report.aprobado / en 1`] = `
{
  "body": "<p>Report <strong>rep-1</strong> was approved.</p>",
  "subject": "Report approved",
}
`;

exports[`StaticTemplateEngine snapshot report.aprobado / es 1`] = `
{
  "body": "<p>El reporte <strong>rep-1</strong> fue aprobado.</p>",
  "subject": "Reporte aprobado",
}
`;

exports[`StaticTemplateEngine snapshot report.enviado / en 1`] = `
{
  "body": "<p>Report <strong>rep-1</strong> was submitted to the TSE.</p>",
  "subject": "Report submitted",
}
`;

exports[`StaticTemplateEngine snapshot report.enviado / es 1`] = `
{
  "body": "<p>El reporte <strong>rep-1</strong> fue enviado al TSE.</p>",
  "subject": "Reporte enviado",
}
`;

exports[`StaticTemplateEngine snapshot report.observado / en 1`] = `
{
  "body": "<p>Report <strong>rep-1</strong> has feedback from the TSE. Review and address the notes.</p>",
  "subject": "Report has feedback",
}
`;

exports[`StaticTemplateEngine snapshot report.observado / es 1`] = `
{
  "body": "<p>El reporte <strong>rep-1</strong> tiene observaciones del TSE. Revísalo y corrige lo indicado.</p>",
  "subject": "Reporte con observaciones",
}
`;

exports[`StaticTemplateEngine snapshot report.revisado / en 1`] = `
{
  "body": "<p>Report <strong>rep-1</strong> was reviewed.</p>",
  "subject": "Report reviewed",
}
`;

exports[`StaticTemplateEngine snapshot report.revisado / es 1`] = `
{
  "body": "<p>El reporte <strong>rep-1</strong> fue revisado.</p>",
  "subject": "Reporte revisado",
}
`;

exports[`StaticTemplateEngine snapshot transfer.aceptada / en 1`] = `
{
  "body": "<p>Your offer for bond <strong>BONO-001</strong> was accepted.</p>",
  "subject": "Offer accepted",
}
`;

exports[`StaticTemplateEngine snapshot transfer.aceptada / es 1`] = `
{
  "body": "<p>Tu oferta por el bono <strong>BONO-001</strong> fue aceptada.</p>",
  "subject": "Oferta aceptada",
}
`;

exports[`StaticTemplateEngine snapshot transfer.cancelada / en 1`] = `
{
  "body": "<p>The transfer of bond <strong>BONO-001</strong> was cancelled.</p>",
  "subject": "Transfer cancelled",
}
`;

exports[`StaticTemplateEngine snapshot transfer.cancelada / es 1`] = `
{
  "body": "<p>La transferencia del bono <strong>BONO-001</strong> fue cancelada.</p>",
  "subject": "Transferencia cancelada",
}
`;

exports[`StaticTemplateEngine snapshot transfer.en_escrow / en 1`] = `
{
  "body": "<p>Bond <strong>BONO-001</strong> is held in escrow while the transfer completes.</p>",
  "subject": "Funds in escrow",
}
`;

exports[`StaticTemplateEngine snapshot transfer.en_escrow / es 1`] = `
{
  "body": "<p>El bono <strong>BONO-001</strong> quedó en garantía (escrow) mientras se completa la transferencia.</p>",
  "subject": "Fondos en garantía (escrow)",
}
`;

exports[`StaticTemplateEngine snapshot transfer.liberada / en 1`] = `
{
  "body": "<p>Bond <strong>BONO-001</strong> was released to Comprador A.</p>",
  "subject": "Bond released to new owner",
}
`;

exports[`StaticTemplateEngine snapshot transfer.liberada / es 1`] = `
{
  "body": "<p>El bono <strong>BONO-001</strong> fue liberado a Comprador A.</p>",
  "subject": "Bono transferido",
}
`;

exports[`StaticTemplateEngine snapshot transfer.pago_registrado / en 1`] = `
{
  "body": "<p>Payment was registered for bond <strong>BONO-001</strong>. Awaiting validation.</p>",
  "subject": "Payment registered",
}
`;

exports[`StaticTemplateEngine snapshot transfer.pago_registrado / es 1`] = `
{
  "body": "<p>Se registró el pago del bono <strong>BONO-001</strong>. Pendiente de validación.</p>",
  "subject": "Pago registrado",
}
`;

exports[`StaticTemplateEngine snapshot transfer.pago_validado / en 1`] = `
{
  "body": "<p>Payment for bond <strong>BONO-001</strong> was confirmed.</p>",
  "subject": "Payment confirmed",
}
`;

exports[`StaticTemplateEngine snapshot transfer.pago_validado / es 1`] = `
{
  "body": "<p>El pago del bono <strong>BONO-001</strong> fue validado.</p>",
  "subject": "Pago validado",
}
`;

exports[`StaticTemplateEngine snapshot transfer.rechazada / en 1`] = `
{
  "body": "<p>Your offer for bond <strong>BONO-001</strong> was rejected.</p>",
  "subject": "Offer rejected",
}
`;

exports[`StaticTemplateEngine snapshot transfer.rechazada / es 1`] = `
{
  "body": "<p>Tu oferta por el bono <strong>BONO-001</strong> fue rechazada.</p>",
  "subject": "Oferta rechazada",
}
`;

exports[`StaticTemplateEngine snapshot transfer.requested / en 1`] = `
{
  "body": "<p>You received a new offer for bond <strong>BONO-001</strong> from Comprador A.</p>",
  "subject": "New offer received",
}
`;

exports[`StaticTemplateEngine snapshot transfer.requested / es 1`] = `
{
  "body": "<p>Recibiste una nueva oferta por el bono <strong>BONO-001</strong> de Comprador A.</p>",
  "subject": "Nueva oferta recibida",
}
`;
